--- a/MainAppcation/Resource.resx
+++ b/MainAppcation/Resource.resx
@@ -124,4 +124,7 @@
   <data name="ProxyEnable" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\ProxyEnable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Setting" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\setting.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
